# CodingProjects

./: README.md
baifen/: README.md
baifen/baifenClient/: autobuild.sh  filetemplates.xml  flashbuilder_code_templete.xml
baifen/baifenClient/lib/: as3Baselib.swc  as3UIComponent.swc  asUIComponent.swc
baifen/baifenClient/src/: baifenClient.as
baifen/baifenClient/src/cache/: PlayerCache.as
baifen/baifenClient/src/cache/item/: PlayerVo.as
baifen/baifenClient/src/common/: ErrorMessage.as
baifen/baifenClient/src/modules/game/controller/: GameController.as
baifen/baifenClient/src/modules/game/event/: GameEvent.as
baifen/baifenClient/src/modules/game/model/: GameManager.as  PokerVo.as
baifen/baifenClient/src/modules/game/view/: GameView.as  OtherPokerListView.as  PokerView.as  RolePokersView.as
baifen/baifenClient/src/modules/login/controller/: LoginController.as
baifen/baifenClient/src/modules/login/event/: LoginEvent.as
baifen/baifenClient/src/modules/login/view/: CreateAccountView.as  LoginView.as
baifen/baifenClient/src/socketCommand/: GameCommandMap.as
baifen/baifenClient/src/socketCommand/customData/: PokerInfo.as  RoomInfo.as  RoomInfo_playerList.as  SC10202_pokerNumList.as
baifen/baifenServer/: CMakeLists.txt  main.cpp
baifen/baifenServer/cache/: gameManager.cpp  gameManager.h  playerManager.cpp  playerManager.h  roomManager.cpp  roomManager.h
baifen/baifenServer/database/: baifenSql.cpp  baifenSql.h  mysqlConnector.cpp  mysqlConnector.h
baifen/baifenServer/modules/: baifenmodule.cpp  baifenmodule.h  gamemodule.cpp  gamemodule.h  gatewayModule.cpp  gatewayModule.h  loginmodule.cpp  loginmodule.h
baifen/baifenServer/mysqlDb/: resumeDb.sh  tables.sql
baifen/baifenServer/net/: byteArray.cpp  byteArray.h  commandMap.cpp  commandMap.h  fSocket.cpp  fSocket.h  networkManager.cpp  networkManager.h  socketEvent.h  socketMessage.h
baifen/baifenServer/net/c2s/cs100/: CS10000.h  CS10001.h  CS10002.h  CS10003.h
baifen/baifenServer/net/c2s/cs101/: CS10100.h  CS10101.h  CS10102.h  CS10103.h
baifen/baifenServer/net/c2s/cs102/: CS10203.h
baifen/baifenServer/net/customData/: PokerInfo.h  RoomInfo.h  RoomInfo_playerList.h  SC10000_testArr.h  SC10003_testArr.h  SC10201_pokerList.h  SC10202_pokerNumList.h  macro_role_info.h  roomInfo22_playerList.h
baifen/baifenServer/net/s2c/sc100/: SC10000.h  SC10001.h  SC10002.h  SC10003.h
baifen/baifenServer/net/s2c/sc101/: SC10100.h  SC10101.h  SC10102.h  SC10103.h  SC10104.h
baifen/baifenServer/net/s2c/sc102/: SC10200.h  SC10201.h  SC10202.h  SC10203.h
baifen/protoDoc/: 100登录.xml  101房间.xml  102游戏.xml  macro.xml
dataStructureAndAlgorithms/: CMakeLists.txt  README.md  countLine.sh  main.cpp
dataStructureAndAlgorithms/include/: array.hpp  avlTree.hpp  binarySearchTree.hpp  binaryTree.hpp  hashtable.hpp  list.hpp  map.hpp  rbTree.hpp  sort.hpp
fchat/: README.md  create_gtags.sh
fchat/client_cpp/: CMakeLists.txt
fchat/client_cpp/src/: client.cpp
fchat/client_cpp/src/manager/: cli_view_manager.cpp  cli_view_manager.hpp  message_manager.cpp  message_manager.hpp  player_list_manager.cpp  player_list_manager.hpp
fchat/client_cpp/src/modules/: client_module.cpp  client_module.hpp
fchat/client_cpp/src/proto/: player.pb.h
fchat/client_python/src/: client.py
fchat/proto_doc/: CMakeLists.txt  chat.proto  generateProto.sh  player.proto
fchat/server_cpp/: CMakeLists.txt
fchat/server_cpp/src/: server.cpp
fchat/server_cpp/src/manager/: message_manager.cpp  message_manager.hpp  player_manager.cpp  player_manager.hpp
fchat/server_cpp/src/modules/: server_module.cpp  server_module.hpp
fchat/server_cpp/src/proto/: chat.pb.cc  chat.pb.h  player.pb.cc
fchat/server_cpp/src/user/: player.cpp  player.hpp
fchat/vs2015_project/: fchat.sln
fchat/vs2015_project/client_cpp/: client_cpp.vcxproj  client_cpp.vcxproj.filters
fchat/vs2015_project/server_cpp/: server_cpp.vcxproj  server_cpp.vcxproj.filters
fileTranster/: CMakeLists.txt  README.md
fileTranster/src/: cmake_config.h  file_transfer.cpp
fileTranster/src/file_transfer/: client_network_handler.cpp  client_network_handler.hpp  command_analyser.cpp  command_analyser.hpp  messages.hpp  server_network_handler.cpp  server_network_handler.hpp  write_file_module.cpp  write_file_module.hpp
fileTranster/src/libs/common/: debug_message.hpp
fileTranster/src/libs/module/: i_module.hpp
fileTranster/src/libs/network/: accept_session.cpp  accept_session.hpp  connect_session.cpp  connect_session.hpp  socket_data.hpp
fileTranster/vs2015project/: file_transfer.sln  file_transfer.vcxproj  file_transfer.vcxproj.filters
testElegance/: CMakeLists.txt
testElegance/src/: main.cpp  network_demo.cpp  rpc_demo.cpp  serialize_demo.cpp  test_bytearray.cpp  test_mempool.cpp  thread_demo.cpp
testElegance/src/serialize/: login_proto.cpp  login_proto.hpp
testElegance/vs2015/: testelegance.sln  testelegance.vcxproj  testelegance.vcxproj.filters
(+32 files in other folders)
