cmake_minimum_required(VERSION 2.8)

SET(INPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/doc)
FILE(GLOB PROTO_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/doc/*.proto)

SET(PROTOC "/usr/bin/protoc")
SET(PROTOC_C_OUT_FLAG --cpp_out)
SET(PROTO_GEN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "PROTOC = ${PROTOC}")
 
FOREACH(PROTO_FILE ${PROTO_INPUT})
  GET_FILENAME_COMPONENT(PROTO_NAME ${PROTO_FILE} NAME_WE)
  SET(CUR_PROTO_GEN
     ${PROTO_GEN_DIR}/${PROTO_NAME}.pb.h
     ${PROTO_GEN_DIR}/${PROTO_NAME}.pb.cc
  )
  SET(PROTO_GEN
     ${PROTO_GEN}
     ${CUR_PROTO_GEN}
  )
  MESSAGE(STATUS "CUR_PROTO_GEN = ${CUR_PROTO_GEN}")
 
  ADD_CUSTOM_COMMAND(
    OUTPUT ${CUR_PROTO_GEN}
    COMMAND ${PROTOC} ${PROTO_FILE} ${PROTOC_C_OUT_FLAG} ${PROTO_GEN_DIR}
            -I${INPUT_DIR}
    DEPENDS ${PROTOC} ${PROTO_FILE}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  )
endforeach(PROTO_FILE ${PROTO_INPUT})
 
find_package(Protobuf REQUIRED)
if(PROTOBUF_FOUND)
  include_directories(${PROTOBUF_INCLUDE_DIRS})
endif()
 
ADD_LIBRARY(proto STATIC ${PROTO_GEN})
target_link_libraries(proto ${PROTOBUF_LIBRARIES} protobuf)